--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -70,7 +70,7 @@
   --font: #363636;
   --font-hover: #828282;
 
-  --font-white: #fff
+  --font-white: #fff;
 
   --chat-bubble-incoming: #dbdbdb;
   --chat-bubble-outgoing: linear-gradient(-80deg, #717AED, #C134F8);
